--- a/mirrorfashion/css/style2.css
+++ b/mirrorfashion/css/style2.css
@@ -1,41 +1,93 @@
-.menuOpcoes ul{
+.menuOpcoes ul {
     font-size: 15px;
 }
-.menuOpcoes a{
+
+.menuOpcoes a {
     color: #003366;
 }
-.sacola{
+
+.sacola {
     background-image: url(../img/sacola.png);
     background-repeat: no-repeat;
     background-position: top right;
-
     font-size: 14px;
     padding-right: 35px;
     text-align: right;
     width: 140px;
-
     padding-top: 8px;
     position: absolute;
     top: 0;
     right: 0;
 }
-body{
+
+body {
     color: #333333;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-ul li{
+
+.menuOpcoes ul li {
     display: inline;
     margin-left: 20px;
 }
-.container{
+
+.container {
     margin: 0 auto;
     width: 940px;
 }
-header{
+
+header {
     position: relative;
 }
-.menuOpcoes{
+
+.menuOpcoes {
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+.busca,
+.menu-departamentos {
+    float: left;
+    background-color: #DCDCDC;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 10px;
+    width: 230px;
+}
+
+.busca h2,
+.busca form,
+.menu-departamentos h2 {
+    margin: 10px;
+}
+
+.menu-departamentos li {
+    background-color: white;
+    margin-bottom: 1px;
+    padding: 5px 10px;
+}
+
+.menu-departamentos a {
+    color: #333333;
+    text-decoration: none;
+}
+
+.busca input[type=search] {
+    width: 170px;
+}
+
+.menu-departamentos {
+    clear: left
+}
+
+.destaque {
+    margin-top: 10px;
+}
+
+.painel li {
+    display: inline-block;
+    vertical-align: top;
+    width: 140px;
+    margin: 2px;
+    padding-top: 10px;
 }
