--- a/mirrorfashion/css/style2.css
+++ b/mirrorfashion/css/style2.css
@@ -92,12 +92,14 @@ header {
   width: 140px;
   margin: 2px;
   padding-top: 10px;
+  transition: 0.7s;
 }
 
 .painel {
   margin: 10px 0;
   padding: 10px;
   width: 445px;
+  border-radius: 4px;
 }
 
 .novidades {
@@ -115,6 +117,8 @@ header {
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-shadow: 3px 3px 2px #FFF;
+  opacity: 0.8;
 }
 
 .painel a {
@@ -182,7 +186,7 @@ footer .container {
   margin-left: 25px;
 }
 
-.busca button{
+.busca button {
   background-image: url(../img/busca.png);
   background-repeat: no-repeat;
   border: none;
@@ -191,48 +195,97 @@ footer .container {
   text-indent: -9999px;
 }
 
-.menuOpcoes a:hover{
+.menuOpcoes a:hover {
   color: #007DC6;
 }
 
-.menuOpcoes a:active{
+.menuOpcoes a:active {
   color: #867DC6;
 }
 
-.menu-departamentos li ul{
+.menu-departamentos li ul {
   display: none;
 }
 
-.menu-departamentos li:hover ul{
+.menu-departamentos li:hover ul {
   display: block;
 }
 
-.menu-departamentos ul ul li{
+.menu-departamentos ul ul li {
   background-color: #DCDCDC;
   opacity: 0.8;
 }
 
-.menu-departamentos li li a:before{
+.menu-departamentos li li a:before {
   content: '- ';
   padding-right: 3px;
 }
 
-.painel h2:before{
+.painel h2:before {
   padding-right: 5px;
   opacity: 0.4;
 }
 
-.painel{
-  border-radius: 4px;
-}
-
-.painel h2{
-  text-shadow: 3px 3px 2px #FFF;
-  opacity: 0.8;
-}
-
-.busca{
+.busca {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
 
+.painel li:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 5px #333;
+  transition: box-shadow 0.7s;
+  transition: scale(1.2);
+  transform: rotate(-5deg);
+}
+
+.painel li:nth-child(2n):hover {
+  transform: scale(1.2) rotate(5deg);
+}
+
+@media (max-width: 939px) {
+  .container {
+    width: 96%;
+  }
+
+  header h1 {
+    text-align: center;
+  }
+
+  header h1 img {
+    max-width: 50%;
+  }
+
+  .sacola {
+    display: none;
+  }
+
+  .menuOpcoes {
+    position: static;
+    text-align: center;
+  }
+
+  .menuOpcoes ul li {
+    display: inline-block;
+    margin: 5px;
+  }
+
+  .busca,
+  .menu-departamentos,
+  .banner-destaque img {
+    margin-right: 0;
+    width: 100%;
+  }
+
+  .painel {
+    width: auto;
+  }
+
+  .painel li {
+    width: 30%;
+  }
+
+  .painel img {
+    width: 100%;
+  }
+}
