--- a/mirrorfashion/css/produto.css
+++ b/mirrorfashion/css/produto.css
@@ -32,7 +32,7 @@ label[for=roxo]::after {
     left: 120px;
 }
 
-.cores input:checked + label::after {
+.cores input:checked+label::after {
     border: 6px solid rgba(0, 0, 0, 3);
 }
 
@@ -40,13 +40,14 @@ label[for=roxo]::after {
     display: none;
 }
 
-.cores input:not(:checked) + label img {
+.cores input:not(:checked)+label img {
     display: none;
 }
 
 .cores label img {
     display: block;
     max-width: 100%;
+    border: 2px solid #CCC;
 }
 
 .produto {
@@ -88,37 +89,98 @@ label[for=roxo]::after {
     border: 6px solid rgba(0, 0, 0, 1);
 }
 
-@media(min-width: 630px) {
-
-.produto{
-    position: relative;
-    padding-left: 40%;
-    font-size: 1.2em;
+.detalhes {
+    padding: 2em 0;
 }
 
-.cores {
-    position: static;
-    padding: 0;
+.detalhes h2 {
+    font-size: 1.5em;
+    line-height: 2;
 }
 
-.cores legend {
-    position: static;
+.detalhes p {
+    margin: 1em 0;
+    font-size: 1em;
+    line-height: 1.5;
+    max-width: 36em;
 }
 
-.cores label img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 35%;
-    max-height: 100%;
+table {
+    border-spacing: 0.2em;
+    border-collapse: separate;
 }
 
-.cores label:after{
-    position: static;
-    float: left;
+thead {
+    background-color: #999;
 }
 
-.cores label::after {
-    margin-right: 10px;
+thead th {
+    font-weight: bold;
+    padding: 0.3em 1em;
+    text-align: center;
 }
+
+td {
+    padding: 0.3em;
+}
+
+tr:nth-child(2n) {
+    background-color: #CCC;
+}
+
+td:first-child {
+    font-style: italic;
+}
+
+.produto-back {
+    background-color: #F2F2F2;
+    margin-top: 1em;
+    border-top: 2px solid #CCC;
+}
+
+@media(min-width: 500px) {
+
+    .detalhes {
+        font-size: 1.2em;
+    }
+
+    fieldset {
+        display: inline-block;
+        vertical-align: top;
+        margin: 1em 0;
+        min-width: 240px;
+        width: 45%;
+    }
+
+    .produto {
+        position: relative;
+        padding-left: 40%;
+        font-size: 1.2em;
+    }
+
+    .cores {
+        position: static;
+        padding: 0;
+    }
+
+    .cores legend {
+        position: static;
+    }
+
+    .cores label img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-width: 35%;
+        max-height: 100%;
+    }
+
+    .cores label:after {
+        position: static;
+        float: left;
+    }
+
+    .cores label::after {
+        margin-right: 10px;
+    }
 }
